mysql-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment
spec:  
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:      
      containers:
      - image: mysql:5.7
        name: mysql-deployment
        ports:
        - containerPort: 3306
        volumeMounts:
         - name: nfs-volume
           mountPath: "/var/lib/mysql"
      volumes:
        - name: nfs-volume
