nexus-service.yml
#apiVersion: v1
#kind: Namespace
#metadata:
# name: nexus 
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: nexus-pvc
#  namespace: nexus
#  labels:
#    app: nexus
#  # For GluserFS only
#  annotations:
#    volume.beta.kubernetes.io/storage-class: glusterfs-storage
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      # CHANGE ME
#      storage: 10Gi
#---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus
#  namespace: nexus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: sonatype/nexus3
        imagePullPolicy: Always
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-volume-storage
      volumes:
        - name: nexus-volume-storage
          persistentVolumeClaim:
            claimName: volume-nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
#  namespace: nexus
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker 
  selector:
    app: nexus
  type: LoadBalancer
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: nexus-ingress
#  namespace: nexus
#  annotations:
#    ingress.kubernetes.io/proxy-body-size: 100m
#    kubernetes.io/tls-acme: "true"
#    kubernetes.io/ingress.class: "nginx"
#spec:
#  tls:
#  - hosts:
#    # CHANGE ME
#    - docker.YOURDOMAIN.com
#    - nexus.YOURDOMAIN.com 
#    secretName: nexus-tls
#  rules:
#  # CHANGE ME
#  - host: nexus.YOURDOMAIN.com 
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: nexus-service
#          servicePort: 80
#  # CHANGE ME
#  - host: docker.YOURDOMAIN.com 
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: nexus-service
#          servicePort: 5000
