sonar-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sonar
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: 80
